reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__pipeline.rs_line_1069_col_5.log

*** crates/tracewake-core/src/actions/pipeline.rs:1069:5: replace rejection_report -> ValidationReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/actions/pipeline.rs
+++ replace rejection_report -> ValidationReport with Default::default()
@@ -1061,37 +1061,17 @@
 fn rejection_report(
     proposal: &Proposal,
     failed_stage: PipelineStage,
     reason_codes: Vec<ReasonCode>,
     checked_facts: Vec<CheckedFact>,
     actor_visible_summary: impl Into<String>,
     debug_summary: impl Into<String>,
 ) -> ValidationReport {
-    let report_id = report_id(proposal);
-    let event_id = rejection_event_id(proposal);
-    ValidationReport {
-        validation_report_id: report_id.clone(),
-        proposal_id: proposal.proposal_id.clone(),
-        actor_id: proposal.actor_id.clone(),
-        action_id: proposal.action_id.clone(),
-        target_ids: proposal.target_ids.clone(),
-        status: ReportStatus::Rejected,
-        failed_stage: Some(failed_stage),
-        reason_codes: reason_codes.clone(),
-        actor_visible_facts: actor_visible_facts(&checked_facts),
-        debug_only_facts: debug_only_facts(&checked_facts),
-        checked_facts,
-        actor_visible_summary: actor_visible_summary.into(),
-        debug_summary: debug_summary.into(),
-        would_mutate: false,
-        event_ids: vec![event_id.clone()],
-        checksum_before: None,
-        checksum_after: None,
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn append_rejection_event(
     context: &mut PipelineContext<'_>,
     proposal: &Proposal,
     report: &ValidationReport,
 ) -> EventEnvelope {
     let event_id = rejection_event_id(proposal);


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ValidationReport: Default` is not satisfied
    --> crates/tracewake-core/src/actions/pipeline.rs:1069:5
     |
1069 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `ValidationReport`
    --> crates/tracewake-core/src/actions/report.rs:215:1
     |
 215 | pub struct ValidationReport {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `actions::report::ValidationReport: Default` is not satisfied
    --> crates/tracewake-core/src/actions/pipeline.rs:1069:5
     |
1069 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `actions::report::ValidationReport`
    --> crates/tracewake-core/src/actions/report.rs:215:1
     |
 215 | pub struct ValidationReport {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
